--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.1",
     "axios": "^1.12.2",
-    "modern-normalize": "^3.0.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^24.5.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-paginate": "^7.1.4",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
