--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.1",
     "axios": "^1.12.2",
+    "modern-normalize": "^1.1.0",
     "react-hot-toast": "^2.6.0",
     "react-paginate": "^8.3.0"
   },
